--- a/src/com/dabomstew/pkrandom/newgui/Bundle.properties
+++ b/src/com/dabomstew/pkrandom/newgui/Bundle.properties
@@ -190,6 +190,8 @@ GUI.tpTypeThemedRadioButton.toolTipText=<html>Pick a type for each trainer and g
 GUI.tpTypeThemedRadioButton.text=Type Themed
 GUI.tpMain5TypeThemedEliteFourGyms.toolTipText=<html>Pick a type for each trainer and give them random Pokemon in that type.<br />Certain groups of trainers, such as the trainers in each gym, will all be given the same (random) type.<br />Only applies to Elite Four and Gym Trainers/Leaders.
 GUI.tpMain5TypeThemedEliteFourGyms.text=Type Themed (Elite Four/Gyms Only)
+GUI.tpMain6Scripted.toolTipText=<html>Use scripting to select trainer pokemon.
+GUI.tpMain6Scripted.text=Scripted
 GUI.tpRivalCarriesStarterCheckBox.toolTipText=<html>If this is selected, the rival will have their starter in every team they battle you with, evolved if it is far enough through.<br />The rest of their team will be chosen in the same way as every other trainer.
 GUI.tpRivalCarriesStarterCheckBox.text=Rival Carries Starter Through Game
 GUI.tpSimilarStrengthCheckBox.toolTipText=<html>If this is checked, the random Pokemon that replaces each Pokemon will be of similar power to the original.<br />However, preserving other rules such as type theming has precedence over this, so weaker or stronger Pokemon will be chosen if there are no other Pokemon available.
